# mastodon-mirror

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs  mastodon.rs  reddit.rs  sync_data.rs
