[package]
name = "mastodon-mirror"
version = "0.1.0"
authors = ["Vanillabrooks <brooks@karlik.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.11"
elefren = "0.20.1"
serde_derive = "1.0.104"
serde = "1.0.104"
reqwest = "0.9.24"
serde_json = "1.0.44"
