[package]
name = "mastodon-mirror"
version = "0.1.0"
authors = ["Vanillabrooks <brooks@karlik.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.11"
elefren = "0.20.1"
serde_derive = "1.0.104"
serde = "1.0.104"
reqwest = {version="0.10.0", features=["json"]}
serde_json = "1.0.44"
tokio = {version=  "0.2.6", features=["macros"]}
gfycat = {git = "https://github.com/vanillabrooks/gfycat"}
bytes = "0.5.3"
fantoccini = "0.12.0"
serde_urlencoded = "0.6.1"