[package]
name = "mastodon-mirror"
version = "0.1.0"
authors = ["Vanillabrooks <brooks@karlik.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.14"
serde = { version = "1.0.104", features = ["derive"] }
reqwest = {version="0.11.12", features=["json", "multipart"]}
serde_json = "1.0.44"
tokio = {version=  "1.21.2", features=["macros"]}
gfycat = {git = "https://github.com/vanillabrooks/gfycat", rev = "f9e889d639f6c00db959792bb91a57aa98c9033a"}
bytes = "1.2.1"
fantoccini = "0.19.3"
serde_urlencoded = "0.7.1"
